@@ -1,7 +1,8 @@
 # Introduction
 The Vaadin Gradle plugin allows you to easily build Vaadin projects with Gradle. It helps with the most tedious tasks when building a Vaadin project like building the widgetset and running development mode. It also helps you to quickly get started by providing tasks for project, component and theme creation.
 
-Build automatically tested on Travis CI: https://travis-ci.org/johndevs/gradle-vaadin-plugin
+Build automatically tested on Travis CI
+[![Build Status](https://travis-ci.org/johndevs/gradle-vaadin-plugin.png?branch=master)](https://travis-ci.org/johndevs/gradle-vaadin-plugin)
 
 
 # Using the plugin
@@ -13,8 +14,10 @@ or to use a specific version of the plugin
 
     apply from: 'http://plugins.jasoft.fi/vaadin.plugin?version=x.x.x'
     
-If you are behind a proxy and cannot use the plugin url directly you then you can download the plugin jar from https://vaadin.com/directory/addon/vaadin-plugin-for-gradle and include it in your build.gradle like so:
+If you are behind a proxy and cannot use the plugin url directly you then you can download the plugin jar from http://vaadin.com/addon/vaadin-plugin-for-gradle and include it in your build.gradle like so:
 ```
+apply plugin: 'vaadin'
+
 buildscript {
     repositories {        
         flatDir dirs: '<Directory where the plugin jar can be found>'
@@ -75,7 +78,10 @@ The following configuration options are available
 * ``vaadin.gwt.draftCompile`` - Should GWT draft compile be used. Default is false.
 * ``vaadin.gwt.strict`` - Should the GWT Compiler be run in strict mode. Default is false.
 * ``vaadin.gwt.userAgent`` - The browsers you want to support. All browser are supported by default.
-* ``vaadin.gwt.jvmArgs`` - Additional JVM arguments passed to the widgetset compiler. Default is ''.
+* ``vaadin.gwt.jvmArgs`` - Additional JVM arguments passed to the widgetset compiler. Default is ''. Example:
+```
+gwt.jvmArgs = ['-Xmx500M', '-XX:MaxPermSize=256M']
+```
 * ``vaadin.gwt.extraArgs`` - Extra compiler arguments that should be passed to the widgetset compiler.
 * ``vaadin.gwt.sourcePaths`` - Source folders where GWT code that should be compiled to JS is found. Default is 'client' and 'shared'.
 * ``vaadin.gwt.collapsePermutations`` - Should all permutations be compiled into a single js file for faster compilation time (but larger file size).
